# bolide-launcher

./: CMakeLists.txt  README
src/: CMakeLists.txt  applauncher.cpp  firstrun.cpp  gesturefilterarea.cpp  gesturefilterarea.h  glanceregistry.cpp  glanceregistry.h  launcherlocalemanager.cpp  main.cpp  preloadhelper.h
src/applauncher/: 000-default-horizontal.qml  000-vertical.qml  001-three-icons-horizontal.qml  002-two-columns.qml  003-turbo-list.qml  004-three-by-three.qml  005-speed-dial.qml  006-glances.qml
src/qml/: MainScreen.qml
src/qml/compositor/: WindowWrapperBase.qml  compositor.qml
src/qml/firstrun/: FakeAlarmclock.qml  FirstRunConfig.qml
src/qml/misc/: BluetoothAgent.qml  PanelsGrid.qml  Splash.qml  desktop.js
src/qml/notifications/: NotificationActions.qml
src/qml/quickpanel/: QuickPanel.qml  QuickPanelToggle.qml
src/qml/today/: Today.qml
src/watchfaces/: 000-default-digital.qml  001-words-worte-palabras-mots.qml  002-analog-70s-classic.qml  003-alternative-digital-2.qml  004-alternative-scifi.qml  005-analog-circle-shades.qml  006-analog-weather-satellite.qml  007-digital-outfit.qml  008-numerals-duo-synth-neon-green.qml  009-analog-scientific-v2.qml  010-analog-aviator.qml  011-bold-hour-bebas.qml  012-analog-words.qml  013-analog-nordic.qml  014-analog-50s-americana.qml  015-funky-town-words.qml  016-masked-spartan.qml  017-contemporary-digital-rings.qml  018-analog-move-to-be-active.qml  019-digital-msdos.qml
wallpapers/full/: 000-flatmesh.qml  002-pulse-gradient.qml
